app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: Arial, Helvetica, sans-serif;
  --app-header-height: 56px;
  --app-footer-height: 82px;
}

.app-header {
  height: var(--app-header-height);
  max-height: var(--app-header-height);
}

.app-footer {
  height: var(--app-footer-height);
  max-height: var(--app-footer-height);
  @apply bg-background
}

.app-content {
  max-height: calc(99vh - var(--app-header-height) - var(--app-footer-height));
  height: calc(99vh - var(--app-header-height) - var(--app-footer-height));
  min-height: calc(99vh - var(--app-header-height) - var(--app-footer-height));
  padding-top: 6px;
  padding-bottom: 60px;
  @apply text-base flex flex-1 flex-col justify-start overflow-scroll no-scrollbar
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

@layer base {
  :root {
    --cyan-50: #ecfeff;
    --cyan-100: #cffafe;
    --cyan-200: #a5f3fc;
    --cyan-300: #67e8f9;
    --cyan-400: #22d3ee;
    --cyan-500: #06b6d4;
    --cyan-600: #0891b2;
    --cyan-700: #0e7490;
    --cyan-800: #155e75;
    --cyan-900: #164e63;
    --cyan-950: #083344;

    --background: #00acc1;
    --foreground: 0 0% 3.9%;
    --card: #00dffa;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: #155e75;
    --primary-foreground: #cffafe;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: rgba(0, 0, 0, 0.5);
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: #09a6d1;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }

}

@layer base {
  html {
    font-size: 16px;
  }

  * {
    @apply border-border;
    touch-action: manipulation;
  }

  body {
    @apply bg-background text-foreground;
  }

  input,
  textarea {
    font-size: 16px;
  }
}

h1 {
  @apply text-xl font-bold leading-tight my-4 text-sky-200 border-b-2 border-sky-200 pb-2;
}
h2 {
  @apply text-lg font-bold leading-tight mt-8 mb-2 text-indigo-900 border-l-8 border-sky-800 pl-2 rounded;
}
h3 {
  @apply text-lg font-bold italic leading-tight mt-8 mb-2 text-violet-900  border-l-4 border-violet-900 pl-2 rounded;
}
ul {
  @apply px-8 py-4 list-disc
}
p {
  @apply my-2
}

.refresher b {
  @apply text-lime-300
}

.highlight-person {
  @apply bg-violet-200 rounded px-1 inline 
}
.highlight-date {
  @apply bg-green-400 rounded px-1 inline font-bold
}

